# zephyr_sensor_data_adv

./: .gitignore  CMakeLists.txt  prj.conf
boards/: nrf52dk_nrf52832.overlay
src/: main.c
src/services/: custom_service.h
src/utils/: rssi.c  rssi.h
